fix z-index

--- a/src/assets/scss/sections/package.scss
+++ b/src/assets/scss/sections/package.scss
@@ -51,7 +51,7 @@
         background-color: #ffffff;
         position: fixed;
         width: calc(100% - 128px);
-        z-index: 1000;
+        z-index: 2;
         bottom: 0;
         right: 0;
         box-shadow: 0px -2px 4px rgba(40, 41, 61, 0.04), 0px -6px 10px rgba(96, 97, 112, 0.08);
